--- a/templates/teacher_list.html
+++ b/templates/teacher_list.html
@@ -7,7 +7,7 @@
 
 
 
-<header class="masthead text-center text-white">
+<header>
    
  <!-- On rows -->
 <div class="table-responsive">
@@ -24,7 +24,6 @@
     </tr>
   </thead>
   <tbody>
-  <h1> List of Teachers </h1>
    <nav class="navbar navbar-light bg-light">
   <form class="example"  method="GET" action="" >
           <input type="text" placeholder="Search.." name="q" value="{{request.GET.q}}" >
