--- a/static/css/one-page-wonder.css
+++ b/static/css/one-page-wonder.css
@@ -37,7 +37,7 @@ h6 {
 .navbar-custom {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: #f8f9f;
 }
 
 .navbar-custom .navbar-brand {
@@ -83,7 +83,7 @@ header.masthead .bg-circle {
   z-index: 0;
   position: absolute;
   border-radius: 100%;
-  background: linear-gradient(0deg, #ee0979 0%, #ff6a00 100%);
+  background: linear-gradient(0deg);
 }
 
 header.masthead .bg-circle-1 {
