--- a/templates/index.html
+++ b/templates/index.html
@@ -7,18 +7,8 @@
 
 
 
-  <header class="masthead text-center text-white">
-    <div class="masthead-content">
-      <div class="container">
-        <h1 class="masthead-heading mb-0">The more that you read</h1>
-        <h2 class="masthead-subheading mb-0">the more things you will know</h2>
+  <header>
 
-      </div>
-    </div>
-    <div class="bg-circle-1 bg-circle"></div>
-    <div class="bg-circle-2 bg-circle"></div>
-    <div class="bg-circle-3 bg-circle"></div>
-    <div class="bg-circle-4 bg-circle"></div>
   </header>
 
 
